# network_config_parser

./: .gitignore  .tool-versions  NTC-USAGE.md  README.md  create_rules.ps1  main.py  pyproject.toml  requirements.txt
.cursor/rules/: 01-project-overview.mdc  03-parser-architecture.mdc  04-ui-dashboard.mdc  05-advanced-features.mdc  06-implementation-testing.mdc  07-current-codebase.mdc
apps/: asa_parser.py  cisco_if_parser.py  exporter.py  identify.py  netmiko_util.py  palo_alto.py  utils.py
docs/: 01-project-overview.md  GRAPH.md  MERMAID.md  README.md  poetry-setup.md
docs/FUTURE/: detailed_implementation_plan.md  future_changes.md  future_use_cases.md  implementation_addendum.md  implementation_overview.md  implementation_plan.md  mermaid.md
